--- a/gb/17/11/15/n9844624.md
+++ b/gb/17/11/15/n9844624.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/crzlhp3279/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/crzlhp3279/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/crzlhp3279/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>快递员送货听到屋内女子求救 警方破门后傻眼</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-96355811-600x400.jpg" />
 <h6>美国俄勒冈州一名UPS送货员送货，听到房间传出女人求救声而报警。警察抵达后，发现发出声音的是一只鹦鹉。(Justin Sullivan/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2017年11月16日讯】（大纪元记者方紫韵编译报导）美国一名<ahref="https://github.com/crzlhp3279/djy/blob/master/gb/tag/ups%E9%80%81%E8%B4%A7%E5%91%98.md#1">UPS送货员</a>，在一户人家门外听到房内传来女人的<ahref="https://github.com/crzlhp3279/djy/blob/master/gb/tag/%E6%B1%82%E6%95%91%E5%A3%B0.md#1">求救声</a>。紧张的送货员打电话报警，警方破门而入时发现求救的根本不是一位女子。</p>
+	<p>【大纪元2017年11月16日讯】（大纪元记者方紫韵编译报导）美国一名<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/ups%E9%80%81%E8%B4%A7%E5%91%98.md#1">UPS送货员</a>，在一户人家门外听到房内传来女人的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B1%82%E6%95%91%E5%A3%B0.md#1">求救声</a>。紧张的送货员打电话报警，警方破门而入时发现求救的根本不是一位女子。</p>
 <h2>送货员的纠结</h2>
 <p>俄勒冈州联邦快递（UPS）送货员李·普尔迪（Lee Purdy）是一个小心谨慎的人，前段时间，他送货到一户人家的时候，听到屋内传出女人求救的声音。</p>
 <p>听着一声又一声的“救命”，普尔迪有些不知所措，“第一瞬间我不确定应该想什么。”</p>
 <p>普尔迪其实心中有些疑惑，觉得声音有些不太像女人，有些像机器等模仿发出来的声音，不过他担心真的是一名女子在呼救，如果自己错过，会错失一个救人的机会。</p>
 <p>就在普尔迪犹豫不决的时候，房子里传出来的声音中除了喊救命，还有哭泣的声音，这让普尔迪决定马上报警。</p>
-<figure id="attachment_9844855" aria-describedby="caption-attachment-9844855" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-450772746.jpg"><img class="size-large wp-image-9844855" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-450772746-600x397.jpg" alt="送UPS快递上门，普尔迪听到房内传出女人的求救声。(Justin Sullivan/Getty Images)" width="600" b="397" /></a><figcaption id="caption-attachment-9844855" class="wp-caption-text">送UPS快递上门，普尔迪听到房内传出女人的<ahref="https://github.com/crzlhp3279/djy/blob/master/gb/tag/%E6%B1%82%E6%95%91%E5%A3%B0.md#1">求救声</a>。(Justin Sullivan/Getty Images)</figcaption></figure>
+<figure id="attachment_9844855" aria-describedby="caption-attachment-9844855" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-450772746.jpg"><img class="size-large wp-image-9844855" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-450772746-600x397.jpg" alt="送UPS快递上门，普尔迪听到房内传出女人的求救声。(Justin Sullivan/Getty Images)" width="600" b="397" /></a><figcaption id="caption-attachment-9844855" class="wp-caption-text">送UPS快递上门，普尔迪听到房内传出女人的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B1%82%E6%95%91%E5%A3%B0.md#1">求救声</a>。(Justin Sullivan/Getty Images)</figcaption></figure>
 <p>“我在电话中请他们（警察）做一个礼貌性的检查，确保没有怪事发生。”普尔迪说。</p>
 <h2>警察破门 发现好笑一幕</h2>
-<p>警察抵达后，决定破门而入，打开房门后，一群人笑了，房间内空无一人，一只通体绿色，但翅膀上有红色，头部为黄色的<ahref="https://github.com/crzlhp3279/djy/blob/master/gb/tag/%E9%B9%A6%E9%B9%89.md#1">鹦鹉</a>正在不断哀嚎：“救命！”</p>
-<p>屋主介绍，这只<ahref="https://github.com/crzlhp3279/djy/blob/master/gb/tag/%E9%B9%A6%E9%B9%89.md#1">鹦鹉</a>名叫迪亚哥（Diego）。克拉克马斯县（Clackamas）警长布莱恩·金森（Brian Jensen）说：“很确定，是鹦鹉迪亚哥在呼救，没人在求救，迪亚哥也很好。”</p>
+<p>警察抵达后，决定破门而入，打开房门后，一群人笑了，房间内空无一人，一只通体绿色，但翅膀上有红色，头部为黄色的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%B9%A6%E9%B9%89.md#1">鹦鹉</a>正在不断哀嚎：“救命！”</p>
+<p>屋主介绍，这只<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%B9%A6%E9%B9%89.md#1">鹦鹉</a>名叫迪亚哥（Diego）。克拉克马斯县（Clackamas）警长布莱恩·金森（Brian Jensen）说：“很确定，是鹦鹉迪亚哥在呼救，没人在求救，迪亚哥也很好。”</p>
 <p>&nbsp;</p>
 <p>不过普尔迪不觉得轻松，他提醒警察：“为什么一只鸟在喊救命？一定有一个原因。”</p>
 <h2>主人揭开谜底</h2>
@@ -35,49 +35,51 @@
 <p>听到苏珊的解释，普尔迪认为是合理的，他接受了这种理由。</p>
 <p>鹦鹉是很有趣的一种小鸟，它们可以模仿很多声音，非常好玩。</p>
 <p>▼ 相关影片：鹦鹉在主人耳边说了一句悄悄话 彻底融化她的心</p>
-<div class="video_fit_container epoch_player"><div class="player-container" id="player-container-94580e00-3d54-4661-5369-77984214f43d" data-id="player-94580e00-3d54-4661-5369-77984214f43d"></div></div><a src="//vs.youmaker.com/assets/player/94580e00-3d54-4661-5369-77984214f43d?r=16&#215;9&amp;s=1080&#215;1080&amp;d=19&&api=7&autostart=true&mute=false&logo=true&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F17%2F11%2F15%2Fn9844624.md#1"></a>
+<div class="video_fit_container epoch_player"><div class="player-container" id="player-container-94580e00-3d54-4661-5369-77984214f43d" data-id="player-94580e00-3d54-4661-5369-77984214f43d"></div></div><a src="//vs.youmaker.com/assets/player/94580e00-3d54-4661-5369-77984214f43d?r=16&#215;9&amp;s=1080&#215;1080&amp;d=19&&api=7&logo=true&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F17%2F11%2F15%2Fn9844624.md#1"></a>
 <p>&nbsp;</p>
 <p>责任编辑：朱颖</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/21/6/21/n13037002.md#1">如何发挥孩子的潜力</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/21/6/20/n13033876.md#1">大火吞噬汽车数秒前救出司机 美童子军获奖</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/21/6/21/n13036544.md#1">动物真聪明？ 香港野猪和印度猴子搭乘地铁</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/21/6/21/n13036703.md#1">10岁童弄丢买书钱超沮丧 商店员工善心解围</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878233.md#1">“神韵是最精彩的！感觉是神话般的演出”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878438.md#1">“演出在讲故事，这是一种文化的复活”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878454.md#1">高级工程师： 神韵舞蹈紧紧‘摄’住观众身心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878889.md#1">设计师：神韵让我看到了复兴和希望</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/7/n8885102.md#1">公司老板：祝神韵继续取得成功</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/12/28/n10000152.md#1">神韵歌词蕴含智慧 电信建筑师受益匪浅</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10747812.md#1" target="_blank">东欧剧变第一国 波兰抛弃共产主义之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/9/n10129004.md#1" target="_blank">袁斌：中共早期“革命史”的真相（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/14/n3683060.md#1" target="_blank">【石静笛】：网在收！活摘器官再成舆论焦点</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/15/n13022866.md#1">女子年幼时“溺毙” 感悟自己曾是高层生命</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/11/n13016050.md#1">【未解之谜】亚特兰大石头山</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/6/n13002603.md#1">才华耀世的苏轼小时候改了老师的诗 师也自叹不如</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/14/n13021756.md#1">【小宇宙传说】巨人现身？世界各地的巨大脚印</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/10/n13011671.md#1">一代风流才子袁枚的四世人生 悔不当初转生改过</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/19/n13033482.md#1">【时事军事】中共空军J-20 的真面目</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/21/n13037499.md#1">【重播】美副防长参加第六届国防科技峰会</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/21/n13036845.md#1">【新闻大家谈】邱香果“消失”引爆加国舆论</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/18/n13032045.md#1">【横河观点】董经纬两个报导 哪个是真的？</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/19/n13032472.md#1">【拍案惊奇】台山核泄发酵之际 核电专家突跳楼</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/8/n13008518.md#1">【独家】中共用“学习”洗脑 民众无声抵抗</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13035251.md#1">相识冯德伦20年才结婚 舒淇曝逗趣原因秀恩爱</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13034434.md#1">贾永婕花百万再捐呼吸防护具 保护医护安全</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13035598.md#1">田亮晒照庆父亲节 幽默感谢儿女继承他的美貌</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/18/n13031768.md#1">侯昌明夫妇做50个便当送医护 亲自下厨网赞爆</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/21/n13036041.md#1">TWICE迷你十辑登Billboard 200榜第6名 新歌创佳绩</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/17/n13029709.md#1">一周瘦2公斤、血糖快速降 三餐不减量减肥秘诀</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13034080.md#1">被小狗从湖中救起 小鹿隔天前来道谢</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13034183.md#1">英国外海出现“漂浮的城市” 神秘感十足</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/19/n13033103.md#1">【重播】疫苗是防重症还是防感染？</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13034296.md#1">海水很咸 喝了会发生什么事？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/crzlhp3279/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/crzlhp3279/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/15/n9844624.htm">快递员送货听到屋内女子求救 警方破门后傻眼</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/15/n9844624.htm">快递员送货听到屋内女子求救 警方破门后傻眼</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/crzlhp3279/djy/blob/master/gb/17/11/15/n9844624.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/crzlhp3279/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/crzlhp3279/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crzlhp3279/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/11/15/n9844624.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
